deploy/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: warden
  labels:
    app.kubernetes.io/name: warden
