deploy/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: warden-control-plane
spec:
  selector: {app: warden-control-plane}
  ports: [{name: http, port: 80, targetPort: http}]
