deploy/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: warden-control-plane
  namespace: warden
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "10"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "30"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts: [warden.vouchins.com]
      secretName: warden-vouchins-tls
  rules:
    - host: warden.vouchins.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: warden-control-plane
                port: {name: http}
